--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
@@ -13,6 +18,7 @@
     "@types/react-router-dom": "5.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-router-dom": "6.4.2",
     "react-scripts": "5.0.1",
     "serve": "^14.0.1",
@@ -31,13 +37,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "serve": "serve -s build",
+    "serve": "npm run build && serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
+      "vazco/typescript",
       "react-app",
       "react-app/jest"
     ]
