--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@supabase/supabase-js": "^2.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
@@ -19,7 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
-    "react-router-dom": "6.4.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "serve": "^14.0.1",
     "workbox-background-sync": "6.5.4",
